objects/ISR_Resource__c/ISR_Resource__c.object-meta.xml
<CustomObject>
    <description>ISR Resource Object</description>
    <label>ISR Resource</label>
    <nameField>
        <displayFormat>ISRR-{000000}</displayFormat>
        <label>ISR Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISR Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>