objects/ISR_Resource__c/fields/Assigne_ESO_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigne_ESO_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssignedESO Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ISR_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>