objects/ISR_Resource__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <description>ESO ISR Resource Ref: Katee Guzman</description>
    <label>Badge</label>
    <type>Date</type>
</CustomField>