objects/ISR_Resource__c/fields/Customer_Email_access__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_access__c</fullName>
    <description>ESO ISR Resource Ref: Katee Guzman</description>
    <label>Customer Email access</label>
    <type>Date</type>
</CustomField>