objects/ISR_Resource__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Ref: Kendra Sands 
Editable only for Tanium Admin Profile and System Admin</description>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>