objects/ISR_Resource__c/fields/Docs__c.field-meta.xml
<CustomField>
    <fullName>Docs__c</fullName>
    <description>ESO ISR Resource Ref: Katee Guzman</description>
    <label>Docs</label>
    <type>Date</type>
</CustomField>