objects/ISR_Resource__c/fields/DOH__c.field-meta.xml
<CustomField>
    <fullName>DOH__c</fullName>
    <description>ESO ISR Ref: Katee Guzman</description>
    <label>DOH</label>
    <type>Date</type>
</CustomField>