objects/ISR_Resource__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>ISR Resource End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>