objects/ISR_Resource__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <description>ESO ISR Resource Ref: Katee Guzman</description>
    <label>Equipment</label>
    <type>Date</type>
</CustomField>