objects/ISR_Resource__c/fields/ES_Resource_Security_Clearance_Required__c.field-meta.xml
<CustomField>
    <fullName>ES_Resource_Security_Clearance_Required__c</fullName>
    <description>Ref: Katee Guzman
Added to ISR Resource Layout</description>
    <inlineHelpText>Please be sure the security clearance you provide is final and correct as this is what will be used for recruiting the resource</inlineHelpText>
    <label>ES Resource Security Clearance Required</label>
    <type>TextArea</type>
</CustomField>