objects/ISR_Resource__c/fields/ESO_Actual_Available_for_Duty_Date__c.field-meta.xml
<CustomField>
    <fullName>ESO_Actual_Available_for_Duty_Date__c</fullName>
    <inlineHelpText>The date upon which the ESO resource is fully onboarded, trained and ready for direct customer engagement</inlineHelpText>
    <label>ESO Actual Available for Duty Date</label>
    <type>Date</type>
</CustomField>