objects/ISR_Resource__c/fields/ESO_Actual_Reported_for_Duty_Date__c.field-meta.xml
<CustomField>
    <fullName>ESO_Actual_Reported_for_Duty_Date__c</fullName>
    <inlineHelpText>The date upon which the ESO resource engages their customer. This date may be the same as “Actual Available for Duty Date” or could be later if the customer levies their own requirements that delay engagement</inlineHelpText>
    <label>ESO Actual Reported for Duty Date</label>
    <type>Date</type>
</CustomField>