objects/ISR_Resource__c/fields/ESO_Contractually_Obligated_Duty_Date__c.field-meta.xml
<CustomField>
    <fullName>ESO_Contractually_Obligated_Duty_Date__c</fullName>
    <inlineHelpText>Date that we are contractually obligated to have the ESO resource report for duty as listed in the contract</inlineHelpText>
    <label>ESO Contractually Obligated Duty Date</label>
    <type>Date</type>
</CustomField>