objects/ISR_Resource__c/fields/ESO_Duty_Ended_Date__c.field-meta.xml
<CustomField>
    <fullName>ESO_Duty_Ended_Date__c</fullName>
    <description>The date in which the ESR disengaged from the client (doesn’t have to be the contract end date).</description>
    <inlineHelpText>The date in which the ESR disengaged from the client (doesn’t have to be the contract end date).</inlineHelpText>
    <label>ESO Duty Ended Date</label>
    <type>Date</type>
</CustomField>