objects/ISR_Resource__c/fields/ESO_Resource__c.field-meta.xml
<CustomField>
    <fullName>ESO_Resource__c</fullName>
    <description>Field added to reflect the same info from ESO ISR 
Ref Katee Guzman and Kendra Sands</description>
    <label>ESO Resource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Project Manager</fullName>
            </value>
            <value>
                <fullName>Technical Writer</fullName>
            </value>
            <value>
                <fullName>Engineer (ESE)</fullName>
            </value>
            <value>
                <fullName>Systems Integration Engineer (ESSIE)</fullName>
            </value>
            <value>
                <fullName>Strategic Consultant</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>ESE - On-site</fullName>
                <isActive>false</isActive>
                <label>ESE - On-site</label>
            </value>
            <value>
                <fullName>ESE - Remote</fullName>
                <isActive>false</isActive>
                <label>ESE - Remote</label>
            </value>
            <value>
                <fullName>Integration Support Engineer (ISE)</fullName>
                <isActive>false</isActive>
                <label>Integration Support Engineer (ISE)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>