objects/ISR_Resource__c/fields/ESO_Resource_Days_per_Week__c.field-meta.xml
<CustomField>
    <fullName>ESO_Resource_Days_per_Week__c</fullName>
    <description>Field added to reflect the same info from ESO ISR 
Ref Katee Guzman, Kendra Sands, Josh Tikal 
12/26/2019 Modified from Number Field to multi-select PIcklist</description>
    <label>ESO Resource Days per Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>