objects/ISR_Resource__c/fields/ESO_Resource_Duration__c.field-meta.xml
<CustomField>
    <fullName>ESO_Resource_Duration__c</fullName>
    <description>Field added to reflect the same info from ESO ISR 
Ref Katee Guzman and Kendra Sands</description>
    <label>ESO Resource Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 months (By exception only)</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>12(+) months</fullName>
            </value>
            <value>
                <fullName>1 week</fullName>
            </value>
            <value>
                <fullName>Deployment - TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>