objects/ISR_Resource__c/fields/ESO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ESO_Start_Date__c</fullName>
    <description>ESO Resource Start Date
Renamed per Kendra Sands request</description>
    <inlineHelpText>The date on which the contract or portion of the contract pertaining to ESO resources, was mutually executed</inlineHelpText>
    <label>ESO Contract Execution Date</label>
    <type>Date</type>
</CustomField>