objects/ISR_Resource__c/fields/ESO_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>ESO_Work_Location__c</fullName>
    <description>ESO Work Location</description>
    <inlineHelpText>City, State, Zip</inlineHelpText>
    <label>ESO Work Location</label>
    <type>TextArea</type>
</CustomField>