objects/ISR_Resource__c/fields/HoK_access__c.field-meta.xml
<CustomField>
    <fullName>HoK_access__c</fullName>
    <description>ESO ISR Resource Ref: Katee Guzman</description>
    <label>HoK access</label>
    <type>Date</type>
</CustomField>