objects/ISR_Resource__c/fields/Reported_for_duty_date__c.field-meta.xml
<CustomField>
    <fullName>Reported_for_duty_date__c</fullName>
    <description>ESO ISR Resource Ref: Katee Guzman</description>
    <label>Reported for duty date</label>
    <type>Date</type>
</CustomField>