objects/ISR_Resource__c/fields/Req_ID__c.field-meta.xml
<CustomField>
    <fullName>Req_ID__c</fullName>
    <description>Hiring Req ID</description>
    <inlineHelpText>Hiring Req ID</inlineHelpText>
    <label>Req ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>