objects/ISR_Resource__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <description>This field created for DLRS to Concatenate Active ESO Resources on the Account via ISR</description>
    <formula>Assigne_ESO_Resource__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>