objects/ISR_Resource__c/fields/Resource_Reference__c.field-meta.xml
<CustomField>
    <fullName>Resource_Reference__c</fullName>
    <label>Resource Reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESO Resource 1</fullName>
            </value>
            <value>
                <fullName>ESO Resource 2</fullName>
            </value>
            <value>
                <fullName>ESO Resource 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>