objects/ISR_Resource__c/fields/Resource_Status__c.field-meta.xml
<CustomField>
    <fullName>Resource_Status__c</fullName>
    <description>Ref: Kendra Sands</description>
    <inlineHelpText>Only to be populated if the ISRR is no longer valid/needed/recalled
Editable only for Tanium Admin Profile and System Admin</inlineHelpText>
    <label>Resource Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESO Approved Recruiting</fullName>
            </value>
            <value>
                <fullName>ESO Assigned</fullName>
            </value>
            <value>
                <fullName>ESO Engagement Complete</fullName>
            </value>
            <value>
                <fullName>ESO Recalled</fullName>
            </value>
            <value>
                <fullName>ESO Failed</fullName>
            </value>
            <value>
                <fullName>ESO Fulfilled by POD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>