objects/ISR_Resource__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>ISR Resource Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>