objects/ISR_Resource__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Changed the formula from NULL to ISBLANK - 12/04/19</description>
    <formula>IF((ESO_Est_End_Date__c &lt; Today()|| ESO_Duty_Ended_Date__c &lt; Today()),&quot;Expired&quot;,IF( ISBLANK(ESO_Actual_Reported_for_Duty_Date__c),&quot;Inactive&quot;,IF(ESO_Actual_Reported_for_Duty_Date__c &gt;Today(),&quot;Inactive&quot;,&quot;Active&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>