objects/ISR_Resource__c/fields/Tanium_access__c.field-meta.xml
<CustomField>
    <fullName>Tanium_access__c</fullName>
    <description>ESO ISR Resource Ref: Katee Guzman</description>
    <label>Tanium access</label>
    <type>Date</type>
</CustomField>