objects/ISR_Resource__c/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <description>Created to compare the value with Contract End Date. Status is updated based on if Today&apos;sDate if before or after ESO Contract End Date</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today&apos;s Date</label>
    <type>Date</type>
</CustomField>