objects/ISR_Resource__c/fields/Trainer_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Duration_Days__c</fullName>
    <description>For Training Request ISR</description>
    <label>Trainer Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>