objects/ISR_Resource__c/fields/Trainer_Role__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Role__c</fullName>
    <label>Trainer Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Time Leading</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>EDR</fullName>
            </value>
            <value>
                <fullName>Observer</fullName>
            </value>
            <value>
                <fullName>Shadow</fullName>
            </value>
            <value>
                <fullName>Solo Trainer</fullName>
            </value>
            <value>
                <fullName>Veteran Trainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>