objects/ISR_Resource__c/fields/Work_Schedule_Details__c.field-meta.xml
<CustomField>
    <fullName>Work_Schedule_Details__c</fullName>
    <description>Ref: Kendra Sands
Editable only for Tanium Admin Profile and System Admin</description>
    <label>Work Schedule Details</label>
    <type>TextArea</type>
</CustomField>