objects/ISR_Resource__c/recordTypes/ESO_ISR_Resources.recordType-meta.xml
<RecordType>
    <fullName>ESO_ISR_Resources</fullName>
    <active>true</active>
    <description>ESO ISR Resources</description>
    <label>ESO ISR Resources</label>
</RecordType>