objects/ISR_Resource__c/recordTypes/Training_Request_ISR_Resources.recordType-meta.xml
<RecordType>
    <fullName>Training_Request_ISR_Resources</fullName>
    <active>true</active>
    <description>Training Request ISR Resources</description>
    <label>Training Request ISR Resources</label>
</RecordType>