objects/ISR_Resource__c/validationRules/End_Date_cannot_be_less_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_cannot_be_less_than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ESO_Actual_Reported_for_Duty_Date__c &gt; ESO_Est_End_Date__c</errorConditionFormula>
    <errorMessage>Reported for Duty Date cannot be greater than Contract End Date</errorMessage>
</ValidationRule>